Fix login/auth bugs and add service worker auto-update
- Remove Validators.email from username field (was blocking non-email logins)
- Add separate forgotForm for forgot-password flow
- Add isLoading spinner on login and forgot-password buttons
- Add forgotSuccess success state for password reset email
- Add RouterLink to ResetPasswordComponent imports
- Wire up SwUpdate for automatic app updates on new deployments
- Add provideServiceWorker to app.config.ts
- Add backend warmup ping on app initialization (eliminates cold-start UX issue)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>