@@ -1,13 +1,18 @@
-// src/main/java/com/btp/config/DataInitializer.java
 package com.btp.config;
 
 import com.btp.entity.Role;
+import com.btp.entity.User;
 import com.btp.repository.RoleRepository;
+import com.btp.repository.UserRepository;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.util.Collections;
+import java.util.Set;
 
 @Configuration
 public class DataInitializer {
@@ -15,37 +20,45 @@ public class DataInitializer {
     private static final Logger log = LoggerFactory.getLogger(DataInitializer.class);
 
     @Bean
-    public CommandLineRunner initDatabase(RoleRepository roleRepository) {
+    public CommandLineRunner initDatabase(RoleRepository roleRepository,
+                                          UserRepository userRepository,
+                                          PasswordEncoder passwordEncoder) {
         return args -> {
-            // Check for and create "ROLE_ADMIN"
-            if (roleRepository.findByNomIn(java.util.Collections.singleton("ROLE_ADMIN")).isEmpty()) {
-                roleRepository.save(new Role(null, "ROLE_ADMIN", "Administrator role with full access.", null, null, null));
-                log.info("Created role: ROLE_ADMIN");
-            }
+            // ── Seed roles ────────────────────────────────────────────────
+            seedRole(roleRepository, "ROLE_ADMIN",       "DG — Directeur Général, full access.");
+            seedRole(roleRepository, "ROLE_CP",          "Conducteur de Projet — manages multiple projects.");
+            seedRole(roleRepository, "ROLE_CC",          "Chef de Chantier — manages site operations.");
+            seedRole(roleRepository, "ROLE_EMPLOYEE",    "Employee role with standard access.");
+            seedRole(roleRepository, "ROLE_CLIENT",      "Client role — limited visibility on their projects.");
+            seedRole(roleRepository, "ROLE_FOURNISSEUR", "Supplier role with specific permissions.");
+            seedRole(roleRepository, "ROLE_USER",        "Default user role.");
 
-            // Check for and create "ROLE_EMPLOYEE"
-            if (roleRepository.findByNomIn(java.util.Collections.singleton("ROLE_EMPLOYEE")).isEmpty()) {
-                roleRepository.save(new Role(null, "ROLE_EMPLOYEE", "Employee role with standard access.", null, null, null));
-                log.info("Created role: ROLE_EMPLOYEE");
-            }
+            // ── Seed default admin user ───────────────────────────────────
+            if (userRepository.findByUsername("admin").isEmpty()) {
+                Role adminRole = roleRepository.findByNomIn(Collections.singleton("ROLE_ADMIN"))
+                        .stream().findFirst()
+                        .orElseThrow(() -> new IllegalStateException("ROLE_ADMIN not found after seeding"));
 
-            // Check for and create "ROLE_CLIENT"
-            if (roleRepository.findByNomIn(java.util.Collections.singleton("ROLE_CLIENT")).isEmpty()) {
-                roleRepository.save(new Role(null, "ROLE_CLIENT", "Client role with limited access.", null, null, null));
-                log.info("Created role: ROLE_CLIENT");
-            }
+                User admin = User.builder()
+                        .username("admin")
+                        .email("admin@btp.com")
+                        .password(passwordEncoder.encode("admin123"))
+                        .status(User.Status.ACTIVE)
+                        .firstName("Admin")
+                        .lastName("BTP")
+                        .roles(Set.of(adminRole))
+                        .build();
 
-            // Check for and create "ROLE_FOURNISSEUR"
-            if (roleRepository.findByNomIn(java.util.Collections.singleton("ROLE_FOURNISSEUR")).isEmpty()) {
-                roleRepository.save(new Role(null, "ROLE_FOURNISSEUR", "Supplier role with specific permissions for managing their products.", null, null, null));
-                log.info("Created role: ROLE_FOURNISSEUR");
-            }
-
-            // Ensure "ROLE_USER" (default for registration) also exists
-            if (roleRepository.findByNomIn(java.util.Collections.singleton("ROLE_USER")).isEmpty()) {
-                roleRepository.save(new Role(null, "ROLE_USER", "Default user role.", null, null, null));
-                log.info("Created role: ROLE_USER");
+                userRepository.save(admin);
+                log.info("Created default admin user: admin / admin123");
             }
         };
+    }
+
+    private void seedRole(RoleRepository repo, String name, String description) {
+        if (repo.findByNomIn(Collections.singleton(name)).isEmpty()) {
+            repo.save(new Role(null, name, description, null, null, null));
+            log.info("Created role: {}", name);
+        }
     }
 }
