@@ -1,7 +1,9 @@
 package com.btp.config;
 
 import com.btp.security.JwtAuthenticationFilter;
+import com.btp.security.RateLimitingFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -17,7 +19,8 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration; // Make sure CORS imports are present
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
+import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
@@ -31,60 +34,115 @@ import java.util.List;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final UserDetailsService userDetailsService; // Inject UserDetailsService
+    private final RateLimitingFilter rateLimitingFilter;
+    private final UserDetailsService userDetailsService;
+
+    // Populated from app.cors.allowed-origins in application.properties
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOriginsRaw;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Add CORS config
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authenticationProvider(authenticationProvider()) // Set the provider
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(
-                                "/auth/**", // Make all /auth endpoints public
-                                "/h2-console/**" // And h2 console
-                        ).permitAll()
-                        .anyRequest().authenticated()
+            .csrf(csrf -> csrf.disable())
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authenticationProvider(authenticationProvider())
+
+            // ── Security response headers ──────────────────────────────────
+            .headers(headers -> headers
+                // Prevent MIME-type sniffing
+                .contentTypeOptions(c -> {})
+                // Deny embedding in iframes (clickjacking)
+                .frameOptions(f -> f.deny())
+                // Tell browsers not to leak the referrer to cross-origin requests
+                .referrerPolicy(r -> r.policy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN))
+                // HSTS: force HTTPS for 1 year (browser caches this)
+                .httpStrictTransportSecurity(hsts -> hsts
+                    .includeSubDomains(true)
+                    .maxAgeInSeconds(31536000)
                 )
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                // CSP: restrict resource loading to same origin + allow inline styles for Angular/Tailwind
+                .contentSecurityPolicy(csp -> csp.policyDirectives(
+                    "default-src 'self'; " +
+                    "script-src 'self'; " +
+                    "style-src 'self' 'unsafe-inline'; " +
+                    "img-src 'self' data: https:; " +
+                    "font-src 'self' data:; " +
+                    "connect-src 'self' *; " +
+                    "frame-ancestors 'none'"
+                ))
+                // Restrict access to browser features
+                .permissionsPolicy(p -> p.policy(
+                    "camera=(), microphone=(), geolocation=(), payment=()"
+                ))
+            )
+
+            // ── Route authorization ────────────────────────────────────────
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/auth/**", "/health/**").permitAll()
+                // SockJS does HTTP handshake before STOMP CONNECT — must be open here;
+                // JWT auth is enforced inside WebSocketAuthInterceptor on STOMP CONNECT
+                .requestMatchers("/ws/**").permitAll()
+                .anyRequest().authenticated()
+            )
+
+            // Rate limiter runs before JWT filter
+            .addFilterBefore(rateLimitingFilter, UsernamePasswordAuthenticationFilter.class)
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // --- START OF THE FINAL FIX ---
-    // This bean provides the authentication logic (finding users, checking passwords).
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setUserDetailsService(userDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
     }
 
-    // This bean provides the password hashing algorithm.
-    // It is now available for injection anywhere in the app.
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        // BCrypt with cost factor 12 (good balance of security vs latency)
+        return new BCryptPasswordEncoder(12);
     }
-    // --- END OF THE FINAL FIX ---
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-    // This bean is still needed for CORS
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setAllowCredentials(true);
+        CorsConfiguration config = new CorsConfiguration();
+
+        // Parse comma-separated list from env var
+        List<String> origins = Arrays.stream(allowedOriginsRaw.split(","))
+            .map(String::trim)
+            .filter(s -> !s.isEmpty())
+            .toList();
+
+        // Always include Capacitor / Ionic origins so the same backend JAR
+        // works for native mobile apps built with Capacitor (iOS / Android).
+        List<String> mobileOrigins = List.of(
+            "capacitor://localhost",
+            "ionic://localhost",
+            "http://localhost"          // Electron dev server
+        );
+
+        List<String> allOrigins = new java.util.ArrayList<>(origins);
+        allOrigins.addAll(mobileOrigins);
+
+        config.setAllowedOrigins(allOrigins);
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept"));
+        config.setExposedHeaders(List.of("Authorization"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
